option('debug-time', type: 'boolean', value: false, description: 'enable debug timing support')
option('aac', type: 'boolean', value: false, description: 'enable AAC support')
option('aptx', type: 'boolean', value: false, description: 'enable apt-X support')
option('ldac', type: 'boolean', value: false, description: 'enable LDAC support')
option('payloadcheck', type: 'boolean', value: true, description: 'disable RTP payload type check (workaround for a PulseAudio bug')
option('aplay', type: 'boolean', value: true, description: 'disable building of bluealsa-aplay tool')
option('rfcomm', type: 'boolean', value: false, description: 'enable building of bluealsa-rfcomm tool')
option('hcitop', type: 'boolean', value: false, description: 'enable building of hcitop tool')
option('pcm-test', type: 'boolean', value: false, description: 'enable PCM plugin test')
option('alsaplugindir', type: 'string', description: 'path where ALSA plugin files are stored')
option('alsaconfdir', type: 'string', description: 'path where ALSA add-on configuration files are stored')
